MILAB-5815: style: format generated files
